--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <title>Aida</title>
     <script src="bower_components/p5js/lib/p5.js" charset="utf-8"></script>
     <script src="bower_components/p5js/lib/addons/p5.sound.js" charset="utf-8"></script>
+    <script src="p5.gibber.min.js" charset="utf-8"></script>
     <script src="app.js" charset="utf-8"></script>
   </head>
   <body>
